# leaksignal

./: .gitignore  Cargo.toml  README.md  policy.schema.json  test_schema.sh
.github/workflows/: schema.yaml
ci_tools/check_schema/: Cargo.toml
ci_tools/check_schema/src/: main.rs
docs/: Dockerfile  docusaurus.config.js  nginx_site.conf  package-lock.json  package.json
docs/docs/: index.md
docs/docs/Concepts/Leakwall/: AI Divulgence Detection.md  Defending Against MFA Fatigue.md  Leakwall.md  Ransomware Attacks.md  Ransomware Prevention.md  Remote Command Execution.md
docs/docs/Dashboard/: Alerts.md  Configure.md  Heatmap.md  Performance.md  Policies.md  Proxy Versions.md  Service Map.md  Traces.md  Traffic.md
docs/docs/Dashboard/PCI Compliance/: Critical Assets.md  Network Security Control.md  PCI Compliance.md
docs/docs/Dashboard/Reports/: API Inventory.md  Anomalous Data Access Report.md  Data Flow Audit Report.md  Performance Metrics Report.md  Reports.md  Segmentation Report.md
docs/docs/Deployment/: Fastly.md  Istio & OSSM.md  Lambda.md  LeakFile.md  NGINX Ingress.md  NGINX.md
docs/docs/LeakAgent/: LeakAgent.md  Metrics.md  Troubleshooting.md
docs/docs/LeakAgent/Deployment/: AWS EKS Addon.md  AWS EKS.md  Deployment.md  Helm Chart.md
docs/docs/LeakLambda/: LeakLambda.md
docs/docs/LeakNGX/: LeakNGX.md
docs/docs/Operator/: Deployment.md  Getting Started.md  Operator.md  Troubleshooting.md
docs/docs/Operator/CRDs/: ClusterLeaksignalIstio & LeaksignalIstio.md
docs/docs/Policy/: Body Collection.md  Categories.md  Environment.md  Header Collection.md  Match Rule.md  Match Rules.md  Other Configuration.md  Overview.md  Parsers.md  Policy.md  Ratelimit.md  Report Style.md  Rules.md  SBAC.md  Sbac.md  Service Identification.md  Services.md  Streaming.md  _category_.yml
docs/docs/Policy/Categories/: Correlate.md  Matcher.md  Rematch.md  _category_.json
docs/docs/Policy/Endpoints/: Endpoint Config.md  Exploit Detection.md  Match Config.md  Overview.md  Path Globs.md  Token Extraction.md  _category_.json
docs/docs/Usecases/: AI Firewall.md  Digital Identity Data Access.md  Getting Started with AI Guardrails.md  MFA Fatigue.md  Ransomware and RCEs.md
docs/src/pages_old/: index.js
docs/static/js/: bigpicture.js  gtag.js
examples/envoy/: envoy_agent.yaml  envoy_command_local_wasm.yaml  envoy_command_remote_wasm.yaml  envoy_local.yaml
examples/istio/: leaksignal.yaml  leaksignal_agent.yaml  leaksignal_local.yaml  leaksignal_ns.yaml  leaksignal_operator.yaml  leaksignal_service.yaml
examples/leakagent/: config.yaml  helm_deployment_proxy.yaml  kustomization.yaml  leakagent.yaml
examples/leakagent/grafana/: leakagent.json  leaksignal.json  leaksignal_matches.json  leaksignal_performance.json
examples/leakagent_helm/: simple.yaml  simple_aws_marketplace.yaml
examples/policies/: advanced_policy.yaml  block_token.yaml  block_token_hashed.yaml  blocked_ip.yaml  cashapp_example.yaml  collection.yaml  complex.yaml  cookie_extractor.yaml  correlate.yaml  default.yaml  exploit_detection.yaml  filebeat.yaml  fluentd.yaml  ignore.yaml  lifemiles.yaml  low_fp.yaml  redact_header.yaml  sbac.yaml  service.yaml  simple_policy.yaml  syslog.yaml  tls.yaml  token_extractor.yaml  unredacted_default.yaml
ingress-nginx/: Dockerfile
leakagent_helm/: Chart.yaml  values.schema.json  values.yaml
leakagent_helm/templates/: _helpers.tpl  config.yaml  deployment.yaml  hpa.yaml  leakagent.yaml  metrics_service.yaml  service.yaml  service_monitor.yaml
leakfinder/: Cargo.toml
leakfinder/benches/: regex_bench.rs
leakfinder/src/: block_state.rs  config.rs  evaluator.rs  lib.rs  low_entropy_hash.rs  match_data.rs  perf.rs  pipe.rs  policy.rs
leakfinder/src/http/: headers.rs  mod.rs  response.rs
leakfinder/src/parsers/: grpc.rs  html.rs  jpeg.rs  mod.rs  plaintext.rs
leakfinder/src/parsers/json/: mod.rs  parse.rs  parse_tests.txt
leakpolicy/: Cargo.toml
leakpolicy/src/: lib.rs  match_rule.rs  matcher.rs  path_glob.rs
leaksignal/: Cargo.toml
leaksignal/benches/: regex_bench.rs
leaksignal/proto/: leaksignal.proto
leaksignal/src/: config.rs  env.rs  evaluator.rs  http_response.rs  lib.rs  pipe.rs  root.rs  service.rs  time.rs
leaksignal/src/parsers/: grpc.rs  html.rs
nginx-ingress/: Dockerfile
operator_helm/: Chart.yaml  values.schema.json  values.yaml
operator_helm/crds/: leaksignal-cluster-crd.yaml  leaksignal-crd.yaml
operator_helm/templates/: _helpers.tpl  deployment.yaml  imagepullsecret.yaml  rbac.yaml
operator_olm/: Dockerfile  olm-catalog-source.yaml  olm-subscription.yaml
operator_olm/catalog/: bundle.yaml  channel.yaml  package.yaml
operator_olm/manifests/: leaksignal.clusterserviceversion.yaml  leaksignal.crd.yaml
operator_olm/metadata/: annotations.yaml
scripts/: publish.sh
scripts/local/: run.sh  run_local.sh
scripts/local/config/: envoy.yaml  envoy_local.yaml  local_policy.yaml
scripts/local/pub/: form.html
scripts/staging/: run_staging.sh  staging.yaml
