[workspace]
members = [
    "leakpolicy",
    "leaksignal",
    "leakfinder",
]
resolver = "2"

[workspace.dependencies]
serde = "1.0"
log = "0.4"
anyhow = "1.0"
arc-swap = "1.5"
# updating causes breaking changes
serde_yaml = "0.8"
fancy-regex = "0.10"
regex = "1.5"
indexmap = "1.9"
rand = "0.8"
futures = "0.3"
flate2 = "1.0"
smallvec = "1.9"
sha2 = "0.10"
async-recursion = "1.0"
protobuf = "3.2"
async-trait = "0.1"
criterion = "0.3"
hex = "0.4"
serde_single_or_vec2 = "1.0"
proxy-wasm = { version = "0.2", git = "https://github.com/Protryon/proxy-wasm-rust-sdk.git" }
serde_json = "1.0"
lazy_static = "1.4"
# kamadak-exif = "0.5"
prost = "0.10"
prost-types = "0.10"
uuid = "1.0"
getrandom = "0.2"
bytes = "1.1"
dlmalloc = "0.2.3"
wasi = "0.11.0"
url = "2.3"
build-data = "0.1"
prost-build = "0.10"
ipnetwork = "0.20"

leakfinder = { path = "leakfinder" }
leakpolicy = { path = "leakpolicy" }