[package]
name = "leakfinder"
version = "0.1.2"
edition = "2021"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/leaksignal/leaksignal"
description = "Leaksignal Proxy-Wasm Filter"
keywords = [ "leaksignal", "proxy", "wasm", "filter", "security" ]
readme = "../README.md"
homepage = "https://www.leaksignal.com/"

[[bench]]
name = "regex_bench"
harness = false

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
log = "0.4"
anyhow = "1.0"
arc-swap = "1.5"
serde_yaml = "0.8"
fancy-regex = "0.10"
regex = "1.5"
indexmap = { version = "1.9", features = ["serde", "std"] }
rand = "0.8"
futures = "0.3"
flate2 = "1.0"
leakpolicy = { version = "0.1.2", path = "../leakpolicy" }
smallvec = { version = "1.9", features = ["serde", "const_generics"] }
sha2 = "0.10"
async-recursion = "1.0"
protobuf = "3.2"

[dev-dependencies]
criterion = "0.3"
hex = "0.4"

[features]
