[package]
name = "leakfinder"
version = "0.1.2"
edition = "2021"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/leaksignal/leaksignal"
description = "Leaksignal Proxy-Wasm Filter"
keywords = [ "leaksignal", "proxy", "wasm", "filter", "security" ]
readme = "../README.md"
homepage = "https://www.leaksignal.com/"

[[bench]]
name = "regex_bench"
harness = false

[dependencies]
serde = { workspace = true, features = ["derive", "rc"] }
log = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
serde_yaml = { workspace = true }
fancy-regex = { workspace = true }
regex = { workspace = true }
indexmap = { workspace = true, features = ["serde", "std"] }
rand = { workspace = true }
futures = { workspace = true }
flate2 = { workspace = true }
leakpolicy = { workspace = true }
smallvec = { workspace = true, features = ["serde", "const_generics"] }
sha2 = { workspace = true }
async-recursion = { workspace = true }
protobuf = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
hex = { workspace = true }