[package]
name = "leakpolicy"
version = "0.1.2"
edition = "2021"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/leaksignal/leaksignal"
description = "Policy implementation for leaksignal"
keywords = [ "leaksignal", "policy" ]
readme = "../README.md"
homepage = "https://www.leaksignal.com/"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.8"
fancy-regex = "0.10"
indexmap = { version = "1.9", features = ["serde", "std"] }
anyhow = "1.0"
log = "0.4"
serde_single_or_vec2 = "1.0"
