[package]
name = "leakpolicy"
version = "0.1.2"
edition = "2021"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/leaksignal/leaksignal"
description = "Policy implementation for leaksignal"
keywords = [ "leaksignal", "policy" ]
readme = "../README.md"
homepage = "https://www.leaksignal.com/"

[dependencies]
serde = { workspace = true, features = ["derive", "rc"] }
serde_yaml = { workspace = true }
fancy-regex = { workspace = true }
indexmap = { workspace = true, features = ["serde", "std"] }
anyhow = { workspace = true }
log = { workspace = true }
serde_single_or_vec2 = { workspace = true }
ipnetwork = { workspace = true, features = ["serde"] }
