[package]
name = "leaksignal"
version = "0.1.2"
edition = "2021"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/leaksignal/leaksignal"
description = "Leaksignal Proxy-Wasm Filter"
keywords = [ "leaksignal", "proxy", "wasm", "filter", "security" ]
readme = "../README.md"
homepage = "https://www.leaksignal.com/"

[[bench]]
name = "regex_bench"
harness = false

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = { version = "0.2", git = "https://github.com/Protryon/proxy-wasm-rust-sdk.git" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1.0"
lazy_static = "1.4"
arc-swap = "1.5"
serde_yaml = "0.8"
fancy-regex = "0.10"
regex = "1.5"
# kamadak-exif = "0.5"
indexmap = { version = "1.9", features = ["serde", "std"] }
prost = "0.10"
prost-types = "0.10"
once_cell = "1.10"
uuid = { version = "1.0", features = ["v4"] }
getrandom = { version = "0.2", features = ["custom"] }
rand = "0.8"
bytes = "1.1"
futures = "0.3"
flate2 = "1.0"
dlmalloc = { version = "0.2.3", features = ["global"] }
leakpolicy = { version = "0.1.2", path = "../leakpolicy" }
smallvec = { version = "1.9", features = ["serde", "const_generics"] }
sha2 = "0.10"
hex = { version = "0.4", features = ["serde"] }
async-recursion = "1.0"
protobuf = "3.2"
wasi = "0.11.0"

[dev-dependencies]
criterion = "0.3"

[build-dependencies]
build-data = "0.1"
prost-build = "0.10"

[features]
