[package]
name = "leaksignal"
version = "0.1.2"
edition = "2021"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/leaksignal/leaksignal"
description = "Leaksignal Proxy-Wasm Filter"
keywords = [ "leaksignal", "proxy", "wasm", "filter", "security" ]
readme = "../README.md"
homepage = "https://www.leaksignal.com/"

[[bench]]
name = "regex_bench"
harness = false

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
arc-swap = { workspace = true }
serde_yaml = { workspace = true }
fancy-regex = { workspace = true }
regex = { workspace = true }
# kamadak-exif = "0.5"
indexmap = { workspace = true, features = ["serde", "std"] }
prost = { workspace = true }
prost-types = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
getrandom = { workspace = true, features = ["custom"] }
rand = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
flate2 = { workspace = true }
dlmalloc = { workspace = true, features = ["global"] }
leakpolicy = { workspace = true }
leakfinder = { workspace = true }
smallvec = { workspace = true, features = ["serde", "const_generics"] }
sha2 = { workspace = true }
hex = { workspace = true, features = ["serde"] }
async-recursion = { workspace = true }
protobuf = { workspace = true }
wasi = { workspace = true }
url = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[build-dependencies]
build-data = { workspace = true }
prost-build = { workspace = true }